--- a/game.project
+++ b/game.project
@@ -1,12 +1,12 @@
 [bootstrap]
-main_collection = /game/game.collectionc
+main_collection = /controller/controller.collectionc
 render = /orthographic/render/orthographic.renderc
 
 [script]
 shared_state = 1
 
 [display]
-width = 1136
+width = 800
 height = 640
 
 [android]
